# ndara_onboarding_guide_agent

./: SECURITY.md
.github/workflows/: deploy.yml
business_owner_ai/: main.py  requirements.txt
business_owner_ai/schemas/: data_schemas.json
business_owner_ai/src/: __init__.py
customer_ai/: BUSINESS_LOGIC.md  ENV_TEMPLATE.txt  PRODUCTION.md  README.md  gunicorn_config.py  main.py  pyproject.toml  requirements.txt  start_production.bat  start_production.sh
customer_ai/schemas/: data_schemas.json
customer_ai/src/api/: __init__.py  inference_api.py
customer_ai/src/core/: __init__.py  agent_output.py  agent_tools.py  appointment_booking_handler.py  business_specific_ai.py  conversation_manager.py  custom_embeddings.py  customer_agent.py  customer_ai_orchestrator.py  finetuning_manager.py  human_behavior_simulator.py  industry_classifier.py  knowledge_base.py  model_registry.py  payment_handler.py  prompts.py  vector_store.py
customer_ai/src/domain/: __init__.py
customer_ai/src/domain/industries/: __init__.py  config.py  taxonomy.py
customer_ai/tests/: __init__.py  conftest.py
customer_ai/tests/unit/domain/: test_taxonomy.py
docs/: AI_AS_HUMAN_AGENT.md  ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPMENT_GUIDELINES.md  INDUSTRY_TAXONOMY.md  OPENAI_INTEGRATION.md  README.md  VOICE_AGENT_ARCHITECTURE.md
docs/api/: business_owner_ai_api.md  customer_ai_api.md  integration_guide.md
docs/business_owner_ai/: PROMPTS.md
docs/features/: business_owner_ai_features.md  customer_ai_features.md
docs/integration/: bookings_api.md  telephony_voice_agent.md  whatsapp_integration.md
docs/voice/: briefing_system.md  inbound_scenarios.md  outbound_campaigns.md  (+4 more)
onboarding_guide_agent/: Dockerfile  README_onboarding.md  api.py  database.py  onboarding_guide_agent.py  platform_onboarding_faq.json  rag_manager.py  requirements.txt  test.py  test_onboarding.py
voice_agent/: IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README.md  READY_FOR_DEVOPS.md  __init__.py  app.py  config.py  list_voices.py  local_voice_test.py  main.py  requirements.txt
(+43 files in other folders)
